# llm-wiki-agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: INSTALL.md  MCP_SERVER.md  MIGRATION.md  RELEASE_CHECKLIST.md
llm_wiki/: __init__.py
llm_wiki/adapters/: base.py  claude.py  codex.py  hermes.py  openclaw.py  opencode.py  trae.py
llm_wiki/assets/kb-skeleton/index/: home.md  themes.md
llm_wiki/assets/kb-skeleton/shared/assets/: README.md
llm_wiki/assets/kb-skeleton/shared/concepts/: README.md
llm_wiki/assets/kb-skeleton/shared/tools/: README.md
llm_wiki/assets/schema/: entity-relationship-model.md  output-format.md  theme-types.md  wiki-writing-standards.md
llm_wiki/assets/schema/templates/: backlog.template.md  decision-brief.template.md  general-theme.template.md  implementation-guide.template.md  meta-wiki.template.md  open-questions-wiki.template.md  project-theme.template.md  research-theme.template.md  reuse-candidates.template.md  technical-asset.template.md
llm_wiki/assets/skills/: README.md
llm_wiki/assets/skills/bootstrap/: SKILL.md
llm_wiki/assets/skills/bootstrap/agents/: openai.yaml
llm_wiki/assets/skills/bootstrap/scripts/: kb_bootstrap.py
llm_wiki/assets/skills/ingest/: SKILL.md
llm_wiki/assets/skills/lint/: SKILL.md
llm_wiki/assets/skills/lint/evals/: evals.json
llm_wiki/assets/skills/query/: SKILL.md
llm_wiki/assets/templates/: core-contract.md.j2  openclaw-instructions.md.j2  opencode-instructions.md.j2
llm_wiki/assets/tools/: _verify_pipeline.py  kb_qmd_capabilities.py  kb_source_registry.py  sync_agent_skills.py
llm_wiki/cli/: doctor.py  init.py  serve.py  sync.py  upgrade.py
llm_wiki/core/: __init__.py  assets.py  manifest.py  mirror.py  upgrade.py
llm_wiki/mcp/: __init__.py  server.py  service.py
plugins/codex/: README.md
plugins/codex/.codex-plugin/: plugin.json
plugins/codex/skills/llm-wiki-agent/: SKILL.md
src/: __init__.py
src/adapters/: __init__.py  base.py  codex.py  opencode.py
src/agent/: __init__.py  apply.py  context.py  providers.py  types.py
src/assets/kb-skeleton/: log.md  qmd.yml
src/assets/kb-skeleton/index/: cross-theme-map.md  recent-updates.md  technical-assets.md
src/assets/kb-skeleton/shared/: README.md
src/assets/schema/: output-format.md  source-adapter-contract.md
src/assets/schema/templates/: asset-match-brief.template.md  concept-page.template.md  engineering-brief.template.md  entity-page.template.md  glossary-wiki.template.md  implementation-guide.template.md  overview-wiki.template.md  requirement-analysis.template.md
src/assets/skills/: README.md
src/assets/skills/bootstrap/: SKILL.md
src/assets/skills/ingest/: SKILL.md
src/assets/skills/project-reverse/: SKILL.md
src/assets/skills/reset/: SKILL.md
src/assets/skills/synthesize/: SKILL.md
src/assets/templates/: AGENTS.md.j2  CLAUDE.md.j2  core-contract.md.j2  hermes-instructions.md.j2  trae-project-rules.md.j2
src/assets/tools/: kb_freshness_check.py  kb_graphify_bridge.py  kb_qmd_capabilities.py  kb_query_index.py  kb_search_bridge.py  sync_agent_skills.py
src/cli/: __init__.py  doctor.py  ingest.py  init.py  lint.py  query.py  serve.py  sync.py  synthesize.py  upgrade.py
src/core/: assets.py  bootstrap.py  doctor.py  inbox.py  manifest.py  mirror.py  upgrade.py
src/mcp/: server.py  service.py
tests/: __init__.py  test_agent_cli.py  test_bootstrap_mirror_upgrade.py  test_ingest_classification.py  test_ingest_requirement_extraction.py  test_mcp_service.py  test_project_reverse_helper.py  test_project_reverse_open_source.py  test_reset_inbox_dirs.py  test_synthesize_helper.py  test_templates_adapters.py
(+50 files in other folders)
