[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-agent"
version = "0.1.0"
description = "Cross-platform LLM Wiki agent initializer and platform adapter."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "LLM Wiki Maintainers" }
]
keywords = ["llm", "wiki", "knowledge-base", "agent", "karpathy", "mcp", "claude", "codex", "trae"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/petersetef1983/llm-wiki-agent"
Repository = "https://github.com/petersetef1983/llm-wiki-agent"
Issues = "https://github.com/petersetef1983/llm-wiki-agent/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.8,<2"]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_wiki*"]

[tool.setuptools.package-data]
llm_wiki = ["assets/**/*"]

[tool.setuptools.exclude-package-data]
llm_wiki = ["assets/**/__pycache__/*", "assets/**/*.pyc", "assets/**/*.pyo"]
