[build-system]
requires = ["setuptools>=68,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-agent"
version = "0.1.1"
description = "Cross-platform LLM Wiki agent initializer and platform adapter."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "LLM Wiki Maintainers" }
]
keywords = ["llm", "wiki", "knowledge-base", "agent", "karpathy", "mcp", "claude", "codex", "trae"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/petersetef1983/llm-wiki-agent"
Repository = "https://github.com/petersetef1983/llm-wiki-agent"
Issues = "https://github.com/petersetef1983/llm-wiki-agent/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.8,<2"]
agent = ["openai>=1.40,<3"]

[project.scripts]
llm-wiki = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["assets/**/*"]

[tool.setuptools.exclude-package-data]
src = ["assets/**/__pycache__/*", "assets/**/*.pyc", "assets/**/*.pyo"]
